--- a/index.html
+++ b/index.html
@@ -13134,7 +13134,7 @@ Informatics Engineering, Telkom University, Indonesia<br>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Research-Question,-Method,-and-Prediction">Research Question, Method, and Prediction<a class="anchor-link" href="#Research-Question,-Method,-and-Prediction">&#182;</a></h3><h3 id="1.-Research-Question">1. Research Question<a class="anchor-link" href="#1.-Research-Question">&#182;</a></h3><p>Orang yang seperti apa bank harus arahkan untuk menaikkan utilisasi kredit yang lebih tinggi? Mengapa orang-orang tersebut tidak mengutilisasikan kredit tersebut?</p>
+<h3 id="Research-Question,-Method,-and-Prediction">Research Question, Method, and Prediction<a class="anchor-link" href="#Research-Question,-Method,-and-Prediction">&#182;</a></h3><h3 id="1.-Research-Question">1. Research Question<a class="anchor-link" href="#1.-Research-Question">&#182;</a></h3><p>Orang dengan ciri-ciri seperti apa dari data yang diberikan saat ini dengan utilisasi yang di bawah rata-rata?</p>
 <h3 id="2.-Method">2. Method<a class="anchor-link" href="#2.-Method">&#182;</a></h3><p>Method yang akan digunakan adalah Statistika Deskriptif, dimana kita akan mengolah data yang sudah diberikan sehingga dapat memberikan informasi yang baru</p>
 <h3 id="3.-Prediction">3. Prediction<a class="anchor-link" href="#3.-Prediction">&#182;</a></h3><p>Menurut saya, kita akan membutuhkan data ciri-ciri orang-orang tersebut. Sehingga dapat terlihat pola yang ada dengan metode-metode statistika. Prediksi saya orang-orang yang tidak mengutilisasikan kredit tersebut merupakan orang-orang yang dari data memiliki Income yang kurang.</p>
 
@@ -14296,7 +14296,7 @@ height=480
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Dilihat dari boxplot diatas, status pendidikan tidak mempengaruhi utilisasi dari kartu kredit berjenis blue ini. Tetapi pada boxplot ini, terlihat bahwa Collage dan Doctorate memiliki Utilisasi yang rendah terlihat pada Q1 nya yang hingga 0.0.</p>
+<p>Dilihat dari boxplot diatas, status pendidikan tidak terlihat mempengaruhi utilisasi dari kartu kredit berjenis blue ini.</p>
 
 </div>
 </div>
@@ -14839,7 +14839,7 @@ height=720
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Adanya pelonjakan pendaftaran pada ±35 Bulan yang lalu atau sekitar hampir 3 tahun yang lalu, bisa kita lihat dari histogram Waktu Buku. Dapat terlihat juga korelasi terhadap Umur Pengguna dengan Waktu Buku, hanya saja pada sekitaran Waktu Buku 35 bulan tersebut terlihat garis lurus bahwa adanya pelonjakan pendaftaran dari berbagai umur pada waktu tersebut.</p>
+<p>Dari eksplorasi terhadap waktu buku yang ada, kami melihat adanya pelonjakan pendaftaran pada ±35 Bulan yang lalu atau sekitar, hampir 3 tahun yang lalu, bisa kita lihat dari histogram Waktu Buku. Dapat terlihat juga korelasi terhadap Umur Pengguna dengan Waktu Buku, hanya saja pada sekitaran Waktu Buku 35 bulan tersebut terlihat garis lurus bahwa adanya pelonjakan pendaftaran dari berbagai umur pada waktu tersebut.</p>
 
 </div>
 </div>
@@ -16230,7 +16230,7 @@ height=480
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Dari diagram diatas juga terlihat bahwa kebanyakan orang yang menggunakan utilisasi dibawah rata-rata sekitar umur 40-55.</p>
+<p>Dari correlation diagram, terliat utilisasi memiliki korelasi negtif terhadap limit kredit. Ada beberapa informasi juga pada korelasi terhadap penghasilan, terlihat bahwa Penghasilan di atas \$60K dan penghasilan yang tidak diketahui memiliki korelasi negatif, sementara orang yang memiliki pendapatan di bawah \$60K memiliki korelasi positif.<br><br> Dari diagram diatas juga terlihat bahwa banyak nasabah kita yang di sekitar umur 35-55, dan dari sana kita juga bisa melihat pada rentang-rentah umur tersebut banyak yang utilisasi di bawah rata-rata. Terlihat pada kepadatan dari scatter plot di atas.</p>
 
 </div>
 </div>
@@ -16444,24 +16444,12 @@ height=360
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Kita dapat melihat berapa nasabah yang berada dibawah rata-rata utilisasi pada kategori kartu Blue.</p>
+<p>Dari status pernikahan, terlihat pada Q1 yang terendah terlihat pada orang-orang yang Divorced dan Single.</p>
 
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[25]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-r"><pre><span></span><span class="o">?</span>barplot
-</pre></div>
 
-    </div>
-</div>
-</div>
-
-</div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[27]:</div>
@@ -17026,7 +17014,7 @@ height=360
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Dapat terlihat, pengguna kartu kategori Blue yang memiliki utilisasi yang rendah dilihat dari status pernikahannya diantara Married (Menikah) dan Single (Belum Menikah). Dari jumlah pendapatan yang terlihat, orang yang memiliki pendapatan di bawah $40K meruapakan tipe orang yang memiliki utilisasi di bawah rata-rata. Setelah itu, orang dengan tingkat pendidikan Graduate merupakan tipe orang yang terbanyak memiliki utilisasi di bawah rata-rata</p>
+<p>Dapat terlihat, pengguna kartu kategori Blue yang memiliki utilisasi yang di bawah rata-rata saat ini, dilihat dari status pernikahannya diantara Married atau Single. Jika dilihat dari tingkat pendidikannya, Graduate dan High School, dan jika dilihat jumlah pendapatan yang terlihat, orang yang memiliki pendapatan di bawah $40K meruapakan tipe orang yang memiliki utilisasi di bawah rata-rata.</p>
 
 </div>
 </div>
@@ -18369,7 +18357,7 @@ height=360
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Mirip dengan pengguna kartu berjenis blue, hanya saja pengguna dengan utilisasi dibawah rata-rata untuk kartu selain biru ini cenderung nasabah yang memiliki penghasilan \$60K - \\$120K</p>
+<p>Mirip dengan pengguna kartu berjenis blue, hanya saja pengguna dengan utilisasi dibawah rata-rata, saat ini untuk kartu selain biru ini cenderung nasabah yang memiliki penghasilan \$60K - \$120K</p>
 
 </div>
 </div>
@@ -18377,14 +18365,51 @@ height=360
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Kesimpulan">Kesimpulan<a class="anchor-link" href="#Kesimpulan">&#182;</a></h3><p>Dari hasil eksplorasi data yang dilakukan, kita dapat mengetahui bahwa masih banyak orang yang masih tidak mengutilisasikan kartu kredit tersebut dan bisa kita lihat orang-orang yang memiliki utilisasi rendah. Pada kartu berjenis biru, pengguna yang sudah menikah dan single serta memiliki pendapatan &lt;\$40K merupakan orang yang memiliki utilisasi yang rendah. Tidak jauh berbeda, kartu berjenis silver, gold, dan platinum memiliki nasabah dengan karakteristik yang sama dengan kartu berjenis blue, dimana nasabah-nasabah tersebut memiliki utilisasi yang rendah. Hanya saja pada kartu berjenis selain blue ini orang yang memiliki pendapatan \\$60K - \$120K merupakan orang yang memiliki utilisasi di bawah rata-rata.</p>
+<h3 id="Kesimpulan">Kesimpulan<a class="anchor-link" href="#Kesimpulan">&#182;</a></h3><p>Dari hasil eksplorasi data yang dilakukan, kita dapat mengetahui bahwa masih banyak orang yang masih tidak mengutilisasikan kartu kredit tersebut dan bisa kita lihat orang-orang yang memiliki utilisasi rendah. Pada kartu berjenis biru, pengguna yang sudah menikah dan single serta memiliki pendapatan &lt;\$40K merupakan orang yang memiliki utilisasi yang rendah. Tidak jauh berbeda, kartu berjenis silver, gold, dan platinum memiliki nasabah dengan karakteristik yang sama dengan kartu berjenis blue, dimana nasabah-nasabah tersebut memiliki utilisasi yang rendah, hanya saja pada kartu berjenis selain blue ini orang yang memiliki pendapatan \$60K - \$120K merupakan orang yang memiliki utilisasi di bawah rata-rata.</p>
 
 </div>
 </div>
 </div>
     </div>
   </div>
-</body>
+<!-- Code injected by live-server -->
+<script type="text/javascript">
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script></body>
 
  
 
