--- a/index.html
+++ b/index.html
@@ -13125,6 +13125,7 @@ Arya Pangestu<sup>4</sup> (1301190144)<br>
 <sup>3</sup>fendiirfan@student.telkomuniversity.ac.id<br>
 <sup>4</sup>aryapangestu@student.telkomuniversity.ac.id<br>
 CII1C2-IF-43-GAB05<br>
+Group X<br>
 Informatics Engineering, Telkom University, Indonesia<br>
 2020</p>
 
